# mqtt_broker_esp

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG-v0.6.0.md  CHANGELOG-v0.6.2.md  CHANGELOG-v0.6.4.md  CHANGELOG-v0.7.0-rc1.md  CHANGELOG-v0.7.0-rc3.md  CHANGELOG-v0.7.1.md  CHANGELOG-v0.7.2.md  CHANGELOG.md  CMakeLists.txt  DEPLOY-mqtt-ux.md  Makefile  README.md  broker_health.py  partitions.csv  plan-berry-scripting.md  plan-disconnected-clients.md  plan-echo-detection.md  plan-mqtt-ux-v2.md  plan-mqtt-ux.md  plan-ntp-server.md  plan-scheduled-publishes.md  sdkconfig.defaults  sdkconfig.defaults.eth  stress_test.py  test_broker.py  test_ntp.py
changelog/: CHANGELOG-v0.6.3.md  CHANGELOG-v0.6.6.md  CHANGELOG-v0.7.0-rc1.md  CHANGELOG-v0.7.0-rc2.md  CHANGELOG-v0.7.0-rc3.md  CHANGELOG-v0.7.0.md  CHANGELOG-v0.7.1.md  CHANGELOG-v0.8.0.md  CHANGELOG-v0.8.1.md  CHANGELOG-v0.8.2.md  CHANGELOG-v0.8.3.md  CHANGELOG-v0.9.0.md  CHANGELOG-v0.9.1.md
components/berry/: CMakeLists.txt  README.md
components/berry/patches/: 0001-bntvmodule-init.patch
components/berry/port/: be_modtab.c  be_port.c  berry_conf.h
components/berry/src/: berry.h
docs/: SCREENSHOTS.md  api.md  architecture.md  portal-latency-analysis.md  qos-persistence-plan.md  timers-ux-audit-v0.8.0.md
examples/berry/: README.md  device_online_tracker.be  tasmota_http_get.be  tasmota_power_state.be
main/: CMakeLists.txt  Kconfig.projbuild  berry_mod_http.c  berry_mod_http.h  berry_mod_mqtt.c  berry_mod_mqtt.h  berry_runtime.c  berry_runtime.h  csrf.c  csrf.h  echo_detect.c  echo_detect.h  eth_connect.c  eth_connect.h  idf_component.yml  main.c  mqtt_broker.c  mqtt_broker.h  mqtt_parser.c  mqtt_parser.h  ntp.c  ntp.h  portal.c  portal.h  portal_berry.c  portal_berry.h  portal_ws.c  portal_ws.h  timers.c  timers.h  tz_presets.c  tz_presets.h  version.h  wifi_connect.c  wifi_connect.h
plan/: plan-tasmesh.md  plan-tls-cert-auth.md
releases/: mqtt_broker-v0.7.1.bin.sha256  mqtt_broker-v0.7.2.bin.sha256
tools/: capture_demo.py  capture_portal.py  capture_reboot.py  capture_save_reboot.py  capture_settings_tz.py  capture_time.py  capture_timers.py
